--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
           This is A Random Thing
           </center>
         </p>
+	      <p style= "font-size: 11px;"> 
+		   <center>
+		I Know, Right?
+		      </center>
+	      </p>
       </body>
 </html>
