--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
 	      <p style= "font-size: 11px;"> 
 		   <center>
-		I Know, Right? Just Click on <span> <button type="button" onclick="welcome alert.js"> ME! </button> </span>
+		I Know, Right? Just Click on <span> <button type="button" onclick="alert ('Welcome to Website 1!')"> ME! </button> </span>
 		      </center>
 	      </p>
       </body>
