--- a/index.html
+++ b/index.html
@@ -12,13 +12,41 @@
             color: Lime;
           }
           #nav {
-            background-color: Red;
+            background-color: Orange;
             color: Blue;
+            text-align: Center;
+          }
+          #HOMENAV {
+            background-color: Lime;
+            color: Blue;
+          }
+          #ABOUTNAV {
+           background-color: Lime;
+            color: Blue; 
+          }
+          #ESSAMNAV {
+           background-color: Lime;
+            color: Blue; 
+          }
+          #HUDSONNAV {
+           background-color: Lime;
+            color: Blue; 
           }
         </style>
         <nav id="nav">
-        |<a href="about.html"> About </a>
-        </nav>
+          <button id="HOMENAV" type="button" onclick="index.html">
+          Home
+          </button>
+          <button id="ABOUTNAV" type="button" onclick="about.html">
+            About
+          </button>
+          <button id="ESSAMNAV" type="button" onclick="essam.html">
+            Essam
+          </button>
+          <button id="HUDSONNAV" type="button" onclick="hudson.html">
+            Hudson
+          </button>
+         </nav>
         <h1 id="welcome">
           Welcome to this totally <abbr title="Random Project Website"> Random Website </abbr>
         </h1>
@@ -27,7 +55,7 @@
           This is A Random Thing
           </center>
         </p>
-	      <p style= "font-size: 11px;"> 
+           <p style= "font-size: 11px;"> 
 		   <center>
 		I Know, Right? Just Click on <span> <button type="button" onclick="alert ('Welcome to Website 1!')"> ME! </button> </span>
 		      </center>
