--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<html lang="en">
       <head>
         <meta charset="utf-8">
-        <title> Website 1 </title>
+        <title> Home | Website 1 </title>
       </head>
       <body>
         <style>
